--- a/rotary-waterblast-tools/nozzles.html
+++ b/rotary-waterblast-tools/nozzles.html
@@ -87,7 +87,7 @@ master-slider: yes
     <div class="tabs tabs-style-bar">
         <nav>
             <ul>
-              <li><a href="#section-bar-1"><span>AP2 Specifications</span></a></li>
+              <li><a href="#section-bar-1"><span>AP Specifications</span></a></li>
               <li><a href="#section-bar-2"><span>CNP2 Specifications</span></a></li>
               <li><a href="#section-bar-3"><span>OCV/OCIH Specifications</span></a></li>
               <li><a href="#section-bar-4"><span>OC8 Specifications</span></a></li>
