--- a/rotary-waterblast-tools/spitfire-shotgunning.html
+++ b/rotary-waterblast-tools/spitfire-shotgunning.html
@@ -58,7 +58,7 @@ master-slider: yes
       <ul class="feature-list">
         <li>Handles a wide range of pressure ratings from 5–22k psi (340–1500 bar) – fewer tools to buy to cover all applications and less downtime swapping or rebuilding tools</li>
         <li>High speed rotation is excellent for removing thin coatings</li>
-        <li>Angled jets allow have broader impact for quicker, more effective cleaning of large surfaces and odd shapes</li>
+        <li>Angled jets have broader impact for quicker, more effective cleaning of large surfaces and odd shapes</li>
         <li>Fewer parts and no seals to stock or replace means reduced costs and maintenance downtime</li>
         <li>Short overall tool length and light weight allow easy handling and less operator fatigue</li>
         <li>External shield option protects the tool from damage caused by lateral impacts</li>
