--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@ landing: yes
       <h2>Events</h2>
     </div>
     
-    <div class="row" style="margin-top:25px;">
-      <a href="https://www.stoneagetools.com/louisiana"><img src="/assets/img/stoneage_logo.png" class="img-responsive"/ alt="FEW 2019"></a>
+    <div class="row" style="margin-top:5px;">
+      <a href="https://www.stoneagetools.com/louisiana"><img src="/assets/img/thumb/upcoming-events-SALA-2019.jpg" class="img-responsive"/ alt="StoneAge Customer Appreciation Day"></a>
       <div class="caption text-center">
         <h4>
           <span class="small"><strong><a href="https://www.stoneagetools.com/louisiana">StoneAge Louisiana Open House &amp; Customer Appreciation Party</a><br>May 9, 2019<br>Geismar, LA<br></strong></span></h4>
