--- a/loc-houston.html
+++ b/loc-houston.html
@@ -83,6 +83,17 @@ contact-houston: yes
             <a href="mailto:mike.rimmell@stoneagetools.com">mike.rimmell@stoneagetools.com</a></p>
           </div>
         </div>
+        
+        <h3 class="section-heading">Outside Sales</h3>
+        <div class="row">
+          <div class="col-sm-6">
+            <p><strong>Bradley Coble</strong><br/>
+              Southeast/Northeast Regional Sales Manager<br/>
+              Office: +1 (225) 508-3520<br/>
+              Direct: +1 (409) 239-9165<br/>
+            <a href="mailto:Bradley.Coble@stoneagetools.com">bradley.coble@stoneagetools.com</a></p>
+          </div>
+        </div>
 
       </div>
     </section>
