--- a/loc-ohio.html
+++ b/loc-ohio.html
@@ -72,10 +72,10 @@ contact-ohio: yes
         <h3 class="section-heading">Outside Sales</h3>
         <div class="row">
           <div class="col-sm-6">
-            <p><strong>Sean Baker</strong><br/>
-              Midwest/Canada Regional Sales Manager<br/>
-              Main: +1 (440) 661-0022
-            <a href="mailto:sean.baker@stoneagetools.com">sean.baker@stoneagetools.com</a></p>
+            <p><strong>Mike Taylor</strong><br/>
+              NE Regional Sales Manager<br/>
+              Main: +1 (419) 690-2267
+            <a href="mailto:mike.taylor@stoneagetools.com">mike.taylor@stoneagetools.com</a></p>
           </div>
         </div>
 
