web hosting update for new blog

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ landing: yes
       data-position="normal">Optimize your job with jetting and pressure calculators
     </div>
 
-    <a href="https://news.stoneagetools.com/updated-jetting-app-is-here" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+    <a href="https://news.stoneagetools.com/stoneage-redesigns-mobile-app/" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
        data-delay="1600" 
@@ -382,31 +382,36 @@ landing: yes
     </div>
     <ul class="home-news list-unstyled"> 
       <li>
-        <h4><a href="https://news.stoneagetools.com/announcing-training">Announcing StoneAge Training</a></h4>
+        <h4><a href="https://news.stoneagetools.com/announcing-stoneage-training/">Announcing StoneAge Training</a></h4>
         <p>StoneAge Training is a comprehensive program designed to educate industrial cleaning professionals in the safe and efficient use of waterjetting tools, safety equipment, and automated systems.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2019</small></p>
       </li>  
       <li>
-        <h4><a href="https://news.stoneagetools.com/stoneage-welcomes-new-regional-sales-manager-0">StoneAge Welcomes New Sales Manager for South Korea &amp; Japan</a></h4>
+        <h4><a href="https://news.stoneagetools.com/stoneage-welcomes-new-branch-operations-manager/">StoneAge Welcomes New Branch Operations Manager</a></h4>
+        <p>StoneAge is pleased to welcome Bob van Wordragen as our new Branch Operations Manager at our Rotterdam branch.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, January 2019</small></p>
+      </li>
+      <li>
+        <h4><a href="https://news.stoneagetools.com/introducing-the-smallest-rotary-nozzle-in-the-industry/">Introducing the Smallest Rotary Nozzle in the Industry</a></h4>
+        <p>The new Beetle BT9.5 is the perfect solution for cleaning tubes as small as 0.47 in. (12 mm) ID.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, December 2018</small></p>
+      </li>
+      <li>
+        <h4><a href="https://news.stoneagetools.com/stoneage-welcomes-new-sales-manager-for-south-korea-japan/">StoneAge Welcomes New Sales Manager for South Korea &amp; Japan</a></h4>
         <p>StoneAge is pleased to welcome Yea-bin Jo as Independent Contractor Sales Korea.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, October 2018</small></p>
       </li>
       <li>
-        <h4><a href="http://news.stoneagetools.com/updated-mobile-app-better-experience">StoneAge Redesigns Mobile App</a></h4>
+        <h4><a href="https://news.stoneagetools.com/stoneage-redesigns-mobile-app/">StoneAge Redesigns Mobile App</a></h4>
         <p>The redesigned StoneAge app delivers a better mobile experience and easier access to product resources.<br>
         <small><i class="fa fa-newspaper-o"></i> News, September 2018</small></p>
       </li> 
       <li>
-        <h4><a href="http://news.stoneagetools.com/stoneage-welcomes-new-regional-sales-manager">Stoneage Welcomes New West Coast Regional Sales Manager</a></h4>
+        <h4><a href="https://news.stoneagetools.com/stoneage-welcomes-new-west-coast-regional-sales-manager/">Stoneage Welcomes New West Coast Regional Sales Manager</a></h4>
         <p>StoneAge is pleased to welcome Mike Johnson as West Coast Regional Sales Manager.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, September 2018</small></p>
       </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/ftp-abx-3l-v2">Product Launch: Updated ABX-3L</a></h4>
-        <p>The new AutoBox ABX-3L is designed to handle even tougher jobs.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, August 2018</small></p>
-      </li> 
-      <li><a href="http://news.stoneagetools.com/">More news here</a></li>
+      <li><a href="https://news.stoneagetools.com/">More news here</a></li>
     </ul>
   </div>
   <!-- End News --> 
