--- a/loc-europe.html
+++ b/loc-europe.html
@@ -41,6 +41,10 @@ contact-uk: yes
             <a href="mailto:sales-eu@stoneagetools.com">sales-eu@stoneagetools.com</a><br/><br/>
             <small>Monday to Friday 8:00am–5:00pm GMT</small></p>
         </div>
+        <div style="background-color: #efefef; padding: 10px 20px 10px 10px;">
+          <h3 style="padding-left:20px;">We're Moving!</h3>
+          <p style="font-weight:300;">StoneAge Europe, Ltd, will be moving our branch office and will open in a new, larger facility on <strong>Monday, 3 June, 2019</strong>.<br/><br/>Our new convenient location will offer additional space to provide customers with product and safety trainings, demonstrations, and equipment rentals.<br/><br/><em>Please check back for details.</em></p>
+        </div>
       </aside>
 
       <div class="col-sm-7 col-sm-offset-1">
@@ -83,21 +87,12 @@ contact-uk: yes
         </div>
         <div class="row">
           <div class="col-sm-6">
-            <p><strong>Gordon Taylor</strong>
-            <br/>Technical Product Expert<br/>
-              Office: +44 (0) 1684 892065<br/>
-              Mobile: +44 (0) 7771 684961<br />
-              <a href="mailto:gordon.taylor@stoneagetools.com">gordon.taylor@stoneagetools.com</a></p>
-          </div>
-          <div class="col-sm-6">
             <p><strong>Jean-Baptiste Ternoy</strong>
             <br/>Sales Manager France<br/>
               Office: +44 (0) 1684 892065<br/>
               Mobile: +33 771 01 74 43<br />
               <a href="mailto:jean-baptiste.ternoy@stoneagetools.com">jean-baptiste.ternoy@stoneagetools.com</a></p>
           </div>
-        </div>
-        <div class="row">
           <div class="col-sm-6">
             <p><strong>Alain Dessonnaz</strong>
             <br/>Warthog Manager Europe<br/>
