--- a/manuals.html
+++ b/manuals.html
@@ -140,7 +140,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/banshee">BN9.5, BN13, BN15,<br>BN18, BN24, BN33</a></td>
                 <td>BANSHEE<br>22k and 40k Tube spinners</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BN_Manual.pdf" target="_blank" class="btn btn-sm">PL 667</a><br><small class="grey">Updated: 04/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BN_Manual.pdf" target="_blank" class="btn btn-sm">PL 667</a><br><small class="grey">Updated: 02/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BN_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 01/2018</small></td>
                 <td class="text-center"></td>
@@ -252,7 +252,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/beetle">BT12, BT18, BT25</a></td>
                 <td>BEETLE<br>Rotary pipe and tube cleaning nozzle </td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BT_manual.pdf" target="_blank" class="btn btn-sm">PL 601</a><br><small class="grey">Updated: 04/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BT_manual.pdf" target="_blank" class="btn btn-sm">PL 601</a><br><small class="grey">Updated: 12/2018</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/BT_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BT_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2018</small></td>
                 <td class="text-center"></td>
@@ -359,7 +359,7 @@ permalink: /manuals
                 <td>NAVIGATOR<br>Hose rotation for cleaning small process pipe with bends</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/NAV-100_manual.pdf" target="_blank" class="btn btn-sm">PL 613</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/NAV_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/NAV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 04/2017</small></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/NAV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 05/2019</small></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
@@ -543,7 +543,7 @@ permalink: /manuals
                 <td>TORUS<br>High flow 3D Tank/vessel cleaning - Fastener assembly guide available</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/Torus_Manual.pdf" target="_blank" class="btn btn-sm">PL 556</a><br><small class="grey">Updated: 10/2018</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/TR-200_data-sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
-                <td class="text-center"><a href="/assets/pdf/tool-talks/TR-200_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 04/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/tool-talks/TR-200_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 02/2017</small></td>
                 <td class="text-center"><a href="/assets/pdf/manuals/TR-200_Fastener_Assembly_Instructions.pdf" target="_blank" class="btn btn-sm">Guide</a></td>
               </tr>
               <tr>
@@ -605,7 +605,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/wgr-magnum">WGR Magnum</a></td>
                 <td>WARTHOG WGR MAGNUM<br>Sewer Jetting Nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/WGR_manual.pdf" target="_blank" class="btn btn-sm">PL 533</a><br><small class="grey">Updated: 04/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/WGR_manual.pdf" target="_blank" class="btn btn-sm">PL 533</a><br><small class="grey">Updated: 05/2018</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/WGR_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
@@ -659,9 +659,9 @@ permalink: /manuals
                 <td class="text-center"></td>
               </tr>
               <tr>
-                <td><a href="/wt">WT-3/8-C &amp; WT-12/</a></td>
-                <td>WARTHOG WT-3/8-C &amp; WT-12<br>Sewer Jetting Nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/WT_Manual.pdf" target="_blank" class="btn btn-sm">PL 528</a><br><small class="grey">Updated: 04/2019</small></td>
+                <td><a href="/wt">WT-3/8-C</a></td>
+                <td>WARTHOG WT-3/8-C<br>Sewer Jetting Nozzles</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/WT_Manual.pdf" target="_blank" class="btn btn-sm">PL 528</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
@@ -670,7 +670,7 @@ permalink: /manuals
                 <td><a href="/wv">WV-1/4</a></td>
                 <td>WARTHOG WV-1/4<br>Sewer Jetting Nozzles</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/WV_Manual_Insert.pdf" target="_blank" class="btn btn-sm">PL 594</a><br><small class="grey">Updated: 01/2017</small></td>
-                <td class="text-center"><a href="/assets/pdf/data-sheets/WT_data_sheet.pdf" target="_blank" class="btn btn-sm">Data Sheet</a></td>
+                <td class="text-center"></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
               </tr>
