SpinCat updates and misc

--- a/downhole-tools/spincat-sc-287.html
+++ b/downhole-tools/spincat-sc-287.html
@@ -13,7 +13,7 @@ master-slider: yes
     <ul class="breadcrumb">
       <li><a href="/">Home</a></li>
       <li><a href="/downhole-tools">Downhole Tools</a></li>
-      <li class="active">SpinCat SC-287</li>
+      <li class="active">SC-287</li>
     </ul> 
   </div>
 </div>
@@ -28,7 +28,7 @@ master-slider: yes
 
     <div class="col-md-6 padding-left-60">
       <div class="product-heading">
-        <h1>SpinCat SC-287</h1>
+        <h1>StoneAge SpinCat&trade; SC-287</h1>
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
@@ -38,7 +38,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">The Spincat SC-287 can be used at operating pressures of 1000 to 5000 psi and flow rates of 1 to 3 bpm (40 to 120 gpm). It has a 2-3/8 PAC inlet thread.</p>
+      <p class="product-description">The StoneAge SpinCat&trade; SC-287 can be used at operating pressures of 1000 to 5000 psi and flow rates of 1 to 3 bpm (40 to 120 gpm). It has a 2-3/8 PAC inlet thread.</p>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Quote</a>
 
@@ -68,7 +68,7 @@ master-slider: yes
               <tbody>
                 <tr>
                   <th>Tool Family</th>
-                  <td colspan="2">SpinCat</td>
+                  <td colspan="2">StoneAge SpinCat&trade;</td>
                 </tr>
                 <tr>
                   <th>Tool Model</th>
@@ -146,13 +146,13 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/SC-287_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat SC-287 Manual</a></li>
+                <li><a href="/assets/pdf/manuals/SC-287_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SC-287 Manual</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/data-sheets/SpinCat_family_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat Family Data Sheet</a></li>
+                <li><a href="/assets/pdf/data-sheets/SpinCat_family_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;StoneAge SpinCat&trade; Family Data Sheet</a></li>
                 <li><a href="http://jetting.stoneagetools.com/#/t/sc" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
@@ -174,7 +174,7 @@ master-slider: yes
                     </a>
                   </div>
                   <!-- End Lightbox call -->
-                  <p class="caption">SpinCat SC-287 Maintenance</p>
+                  <p class="caption">SC-287 Maintenance</p>
               </div>
             </div>
           </section>
@@ -322,19 +322,19 @@ master-slider: yes
   <div class="row row-centered padding-tb-30">
     <div class="col-sm-2 col-centered">
       <a href="/sc-125"><img class="img-responsive" src="/assets/img/product/sc-125_02_sm.png" alt="SpinCat SC-125 slimhole wash tools">
-      <h5>SpinCat SC-125</h5></a>
+      <h5>SC-125</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
       <a href="/sc-168"><img class="img-responsive" src="/assets/img/product/sc_168_01.png" alt="SpinCat SC-168 downhole wash tools">
-      <h5>SpinCat SC-168</h5></a>
+      <h5>SC-168</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
       <a href="/sc-212"><img class="img-responsive" src="/assets/img/product/sc_212_01.png" alt="SpinCat SC-212 downhole wash tools">
-      <h5>SpinCat SC-212</h5></a>
+      <h5>SC-212</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
       <a href="/sc-250"><img class="img-responsive" src="/assets/img/product/sc_250_01.png" alt="SpinCat SC-250 downhole wash tools">
-      <h5>SpinCat SC-250</h5></a>
+      <h5>SC-250</h5></a>
     </div>
   </div>
 </section>
