--- a/manuals.html
+++ b/manuals.html
@@ -736,6 +736,12 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BA2.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
               </tr>
               <tr>
+                <td>BADGER 2"</td>
+                <td>LOCKING HEAD VERSION<br>Models: BA-LK-P4, BA-BSPP4, BA-MP6R, BA-MP9L, BA-MP9R</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BA_manual.pdf" target="_blank" class="btn btn-sm">Manual</a></td>
+                <td class="text-center"><a href="/assets/pdf/reference/legacy/Obsolete_BA2_LK.pdf" target="_blank" class="btn btn-sm">Notice</a></td>
+              </tr>
+              <tr>
                 <td>BC 405</td>
                 <td>Cartrige seal for Barracuda rotary shotgun tools</td>
                 <td class="text-center"></td>
