--- a/terms-training.html
+++ b/terms-training.html
@@ -17,7 +17,7 @@ permalink: /terms-training
       <div class="col-sm-7 padding-tb-30">
         <h3><a href="/terms"><i class="fa fa-chevron-circle-right"></i> Review terms &amp; conditions of sale</a></h3>
         <h3><a href="/warranty"><i class="fa fa-chevron-circle-right"></i> Review warranty for waterblast and sewer tools</a></h3>
-        <h3><a href="/warranty-dh"><i class="fa fa-chevron-circle-right"></i> Review Warranty for SpinCat Downhole Tools</a></h3>
+        <h3><a href="/warranty-dh"><i class="fa fa-chevron-circle-right"></i> Review Warranty for StoneAge SpinCat&trade; Downhole Tools</a></h3>
       </div>
     </div>
     <div class="row">
