--- a/terms.html
+++ b/terms.html
@@ -18,7 +18,7 @@ permalink: /terms
         <h4>Products sold by seller are designed and intended to be used at high pressures and speeds, and may be dangerous if operated improperly or without the use of appropriate safety devices and guards. Buyer is cautioned to carefully read and understand these terms and conditions, as they have important legal consequences.</h4>
         <h3><a href="/terms-training"><i class="fa fa-chevron-circle-right"></i> Review terms for StoneAge Training</a></h3>
         <h3><a href="/warranty"><i class="fa fa-chevron-circle-right"></i> Review warranty for waterblast and sewer tools</a></h3>
-        <h3><a href="/warranty-dh"><i class="fa fa-chevron-circle-right"></i> Review Warranty for SpinCat Downhole Tools</a></h3>
+        <h3><a href="/warranty-dh"><i class="fa fa-chevron-circle-right"></i> Review Warranty for StoneAge SpinCat&trade; Downhole Tools</a></h3>
       </div>
     </div>
     <div class="row">
