--- a/downhole-tools.html
+++ b/downhole-tools.html
@@ -12,20 +12,20 @@ permalink: /downhole-tools
       <img src="/assets/img/spincat_family_002.jpg" class="img-responsive" alt="SpinCat Downhole Wash Tools"/>
     </div>
     <div class="col-sm-12 heading">
-      <h1>SpinCat</h1>
+      <h1>StoneAge SpinCat&trade;</h1>
       <h3>Downhole Tools</h3>
     </div>
   </div>
 
   <section class="row padding-tb-30">
     <div class="container">
-      <h2 class="width-90"><strong>SpinCat tools provide a durable, controlled rotation solution for well intervention</strong></h2>
-      <p class="width-90 description margin-bottom-30">A viscous fluid governor controls rotation speed to maximize jet power delivered to the tubing walls. By using only a few rotating jets, each jet is bigger to convey hard-hitting power. Replaceable jets are efficient and clean recesses and irregular surfaces without damaging the well pipe. Over thirty years of waterjet engineering back the SpinCat design, setting the standard for rotary nozzle performance and durability.</p>
+      <h2 class="width-90"><strong>StoneAge SpinCat&trade; tools provide a durable, controlled rotation solution for well intervention</strong></h2>
+      <p class="width-90 description margin-bottom-30">A viscous fluid governor controls rotation speed to maximize jet power delivered to the tubing walls. By using only a few rotating jets, each jet is bigger to convey hard-hitting power. Replaceable jets are efficient and clean recesses and irregular surfaces without damaging the well pipe. Over thirty years of waterjet engineering back the StoneAge SpinCat&trade; design, setting the standard for rotary nozzle performance and durability.</p>
       <!-- Tool List -->
       <div class="row">
         <div class="col-sm-6 product-list">
           <div class="list-group">
-            <a href="/sc-125" class="list-group-item header">SpinCat SC-125</a>
+            <a href="/sc-125" class="list-group-item header">SC-125</a>
             <a href="/sc-125" class="list-group-item"><img src="/assets/img/product/sc-125-03.png" class="img-responsive sc-168" alt="SpinCat SC-125 Downhole Wash Tools">
               <p>Flow range: 0.5 – 1.5 bpm</p>
             </a>
@@ -33,7 +33,7 @@ permalink: /downhole-tools
         </div>
         <div class="col-sm-6 product-list">
           <div class="list-group">
-            <a href="/sc-168" class="list-group-item header">SpinCat SC-168</a>
+            <a href="/sc-168" class="list-group-item header">SC-168</a>
             <a href="/sc-168" class="list-group-item"><img src="/assets/img/product/sc_168_01.png" class="img-responsive sc-168" alt="SpinCat SC-168 Downhole Wash Tools">
               <p>Flow range: 0.7 – 1.3 bpm</p>
             </a>
@@ -43,7 +43,7 @@ permalink: /downhole-tools
       <div class="row">
         <div class="col-sm-4 product-list">
           <div class="list-group sc-212">
-            <a href="/sc-212" class="list-group-item header">SpinCat SC-212</a>
+            <a href="/sc-212" class="list-group-item header">SC-212</a>
             <a href="/sc-212" class="list-group-item"><img src="/assets/img/product/sc_212_01.png" class="img-responsive sc-212" alt="SpinCat SC-212 Downhole Coil Tubing Wash Tools">
               <p>Flow range: 0.8 – 2 bpm</p>
             </a>
@@ -52,7 +52,7 @@ permalink: /downhole-tools
         
         <div class="col-sm-4 product-list">
           <div class="list-group">
-            <a href="/sc-250" class="list-group-item header">SpinCat SC-250</a>
+            <a href="/sc-250" class="list-group-item header">SC-250</a>
             <a href="/sc-250" class="list-group-item"><img src="/assets/img/product/sc_250_01.png" class="img-responsive sc-250" alt="SpinCat SC-250 Downhole Wash Tools">
               <p>Flow range: 0.7 – 3.0 bpm</p>
             </a>
@@ -61,7 +61,7 @@ permalink: /downhole-tools
         
         <div class="col-sm-4 product-list">
           <div class="list-group">
-            <a href="/sc-287" class="list-group-item header">SpinCat SC-287</a>
+            <a href="/sc-287" class="list-group-item header">SC-287</a>
             <a href="/sc-287" class="list-group-item"><img src="/assets/img/product/sc_287_01.png" class="img-responsive sc-287" alt="SpinCat SC-287 Downhole Wash Tools">
               <p>Flow range: 1.0 – 3.0 bpm</p>
             </a>
@@ -77,7 +77,7 @@ permalink: /downhole-tools
       <div class="row">
         <div class="col-sm-4 padding-30 grey">
           <h2>How it works</h2>
-          <p>The SpinCat is an extremely durable self-rotating nozzle for well service applications. The powerful rotating jet design is engineered to maximize the limited hydraulic horsepower available to the BHA at the end of a long CT or workstring. Jet reaction force powers rotation of the head and an internal centrifugal speed control mechanism maintains rotation speeds.</p>
+          <p>The StoneAge SpinCat&trade; is an extremely durable self-rotating nozzle for well service applications. The powerful rotating jet design is engineered to maximize the limited hydraulic horsepower available to the BHA at the end of a long CT or workstring. Jet reaction force powers rotation of the head and an internal centrifugal speed control mechanism maintains rotation speeds.</p>
         </div>
         <div class="col-sm-4 padding-30 grey">
           <h2>Jetting</h2>
@@ -85,7 +85,7 @@ permalink: /downhole-tools
         </div>
         <div class="col-sm-4 padding-30 grey">
           <h2>Features</h2>
-          <p>SpinCat tools have a straight flow-through design with a leak-free high pressure seal, so pump power is not wasted. The tools can be used at temperatures up to 200°C, with up to 30% HCL and Nitrogen injection.</p>
+          <p>StoneAge SpinCat&trade; tools have a straight flow-through design with a leak-free high pressure seal, so pump power is not wasted. The tools can be used at temperatures up to 200°C, with up to 30% HCL and Nitrogen injection.</p>
         </div>
       </div>
     </div>
