--- a/downhole-tools/spincat-sc-125.html
+++ b/downhole-tools/spincat-sc-125.html
@@ -12,7 +12,7 @@ master-slider: yes
     <ul class="breadcrumb">
       <li><a href="/">Home</a></li>
       <li><a href="/downhole-tools">Downhole Tools</a></li>
-      <li class="active">SpinCat SC-125</li>
+      <li class="active">SC-125</li>
     </ul> 
   </div>
 </div>
@@ -41,7 +41,7 @@ master-slider: yes
 
     <div class="col-md-7 padding-left-60">
       <div class="product-heading">
-        <h1>SpinCat SC-125</h1>
+        <h1>StoneAge SpinCat&trade; SC-125</h1>
         <div class="dropdown product-social">
           <a href="#" class="dropdown-toggle" type="button" role="button" data-toggle="dropdown"><i class="fa fa-caret-down"></i> Share</a>
           <ul class="dropdown-menu">
@@ -93,7 +93,7 @@ master-slider: yes
               <tbody>
                 <tr>
                   <th>Tool Family</th>
-                  <td colspan="2">SpinCat</td>
+                  <td colspan="2">StoneAge SpinCat&trade;</td>
                 </tr>
                 <tr>
                   <th>Tool Model</th>
@@ -200,14 +200,14 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/SC-125_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat SC-125 Manual</a></li>
+                <li><a href="/assets/pdf/manuals/SC-125_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SC-125 Manual</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/data-sheets/SC-125_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat SC-125 Data Sheet</a></li>
-                <li><a href="/assets/pdf/data-sheets/SpinCat_family_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SpinCat Family Data Sheet</a></li>
+                <li><a href="/assets/pdf/data-sheets/SC-125_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SC-125 Data Sheet</a></li>
+                <li><a href="/assets/pdf/data-sheets/SpinCat_family_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;StoneAge SpinCat&trade; Family Data Sheet</a></li>
                 <li><a href="http://jetting.stoneagetools.com/#/t/sc" target="_blank"><i class="fa fa-plane"></i> &nbsp;Tool Jetting</a></li>
               </ul>
             </div>
@@ -229,7 +229,7 @@ master-slider: yes
                   </a>
                 </div>
                 <!-- End Lightbox call -->
-                <p class="caption">SpinCat SC-125 Maintenance</p>
+                <p class="caption">SC-125 Maintenance</p>
               </div>
             </div>
           </section>
@@ -376,19 +376,19 @@ master-slider: yes
   <div class="row row-centered padding-tb-30">
     <div class="col-sm-2 col-centered">
       <a href="/sc-168"><img class="img-responsive" src="/assets/img/product/sc_168_01.png" alt="SpinCat SC-168 downhole wash tools">
-      <h5>SpinCat SC-168</h5></a>
+      <h5>SC-168</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
       <a href="/sc-212"><img class="img-responsive" src="/assets/img/product/sc_212_01.png" alt="SpinCat SC-212 downhole wash tools">
-      <h5>SpinCat SC-212</h5></a>
+      <h5>SC-212</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
       <a href="/sc-250"><img class="img-responsive" src="/assets/img/product/sc_250_01.png" alt="SpinCat SC-250 downhole wash tools">
-      <h5>SpinCat SC-250</h5></a>
+      <h5>SC-250</h5></a>
     </div>
     <div class="col-sm-2 col-centered">
       <a href="/sc-287"><img class="img-responsive" src="/assets/img/product/sc_287_01.png" alt="SpinCat SC-287 downhole wash tools">
-      <h5>SpinCat SC-287</h5></a>
+      <h5>SC-287</h5></a>
     </div>
   </div>
 </section>
