Rotary tools data sheets, patents, UK move

--- a/loc-europe.html
+++ b/loc-europe.html
@@ -30,27 +30,26 @@ contact-uk: yes
   <main>
     <section class="container padding-tb-30 margin-bottom-30">
       <aside class="col-sm-3 margin-bottom-30 cta">
-        <img src="/assets/img/stoneage-uk-aquapower.jpg" class="img-responsive img-thumbnail" alt="StoneAge Europe office">
+        <img src="/assets/img/stoneage-uk.jpg" class="img-responsive img-thumbnail" alt="StoneAge Europe office">
         <div class="padding-tb-30">
           <p><span class="slab">StoneAge UK</span><br/>
-            Unit 2, Britannia Business Centre<br/>
-            Britannia Way<br/>
-            Malvern WR14 1GZ<br/>
+            Unit 3 Crucible Business Park<br>
+            Woodbury Lane<br>
+            Norton, Worcester<br>
+            Worchestershire, WR5 2DQ<br/>
             United Kingdom<br/><br/>
             +44 (0) 1684 892065<br/>
             <a href="mailto:sales-eu@stoneagetools.com">sales-eu@stoneagetools.com</a><br/><br/>
             <small>Monday to Friday 8:00am–5:00pm GMT</small></p>
-        </div>
-        <div style="background-color: #efefef; padding: 10px 20px 10px 10px;">
-          <h3 style="padding-left:20px;">We're Moving!</h3>
-          <p style="font-weight:300;">StoneAge Europe, Ltd, will be moving our branch office and will open in a new, larger facility on <strong>Monday, 3 June, 2019</strong>.<br/><br/>Our new convenient location will offer additional space to provide customers with product and safety trainings, demonstrations, and equipment rentals.<br/><br/><em>Please check back for details.</em></p>
         </div>
       </aside>
 
       <div class="col-sm-7 col-sm-offset-1">
         <div class="row margin-bottom-30">
           <p style="font-size:120%;">StoneAge UK provides industry-leading equipment for high pressure waterblasting and sewer jetting, along with world-class technical support, to industrial cleaning contractors across the European Economic Area.</p>
-<!--          <a href="#" data-featherlight="/assets/img/SA_EU_distribution_map.jpg"><img src="/assets/img/SA_EU_distribution_map.jpg" alt="StoneAge European distribution map" class="float-right img-responsive" /><p class="small text-right"><em>Click to enlarge</em></p></a>        -->
+          <h3 class="slab" style="font-weight: 800">We've Moved!</h3>
+          <p>Our new convenient location offers additional space to provide customers with product and safety trainings, demonstrations, and immediate access to a wider range of inventory.</p>
+          <img src="/assets/img/stoneage-uk_move_map.jpg" class="img-responsive" alt="New StoneAge UK location" />
         </div>
 
         <h3 class="section-heading">Operations and Field Support</h3>
