--- a/stoneage-patents.html
+++ b/stoneage-patents.html
@@ -200,6 +200,11 @@ permalink: /patents
         <td>Flexible Lance Drive Apparatus Tube Guide</td>
       </tr>
       <tr>
+        <td>9981822</td>
+        <td>ABX-2L</td>
+        <td>Flexible tube cleaning lance drive apparatus</td>
+      </tr>
+      <tr>
         <td>9845594</td>
         <td>WHR, WGR</td>
         <td>Switcher Nozzle</td>
