Add Solutions to main nav

--- a/solutions.html
+++ b/solutions.html
@@ -23,6 +23,10 @@ master-slider: yes
         <h4>Blastrack wall cleaning in tunnel</h4>
       </div>
       <div class="item">
+        <img class="img-responsive" src="/assets/img/solutions/Domed_Bundle_Positioner_01.jpg" alt="Automated domed bundle tube cleaning">
+        <h4>No-entry domed bundle cleaning</h4>
+      </div>
+      <div class="item">
         <img class="img-responsive" src="/assets/img/solutions/Blastrack-XY-01.jpg" alt="Blastrack X/Y cleaner">
         <h4>Blastrack X/Y frame cleaning condenser tubes</h4>
       </div>
@@ -37,10 +41,6 @@ master-slider: yes
       <div class="item">
         <img class="img-responsive" src="/assets/img/solutions/Hose-Reels.jpg" alt="Custom hose reels">
         <h4>Custom hose reels</h4>
-      </div>
-      <div class="item">
-        <img class="img-responsive" src="/assets/img/solutions/Blastrack-Wall-02.jpg" alt="Blastrack wall cleaner">
-        <h4>Blastrack ship hull cleaning</h4>
       </div>
       <div class="item">
         <img class="img-responsive" src="/assets/img/solutions/Cyclone-Cleaner-02.jpg" alt="Cyclone Cleaner (retracted)">
