finalize WT updates after launch of 1/2-inch

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -252,6 +252,9 @@
 <div id="ws-fluid-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/QSa8GERX0m8?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="wt-overview-vid">
+  <iframe width="854" height="480" src="https://player.vimeo.com/video/340781614" frameborder="0" allowfullscreen></iframe>
+</div>
 <div id="wt-disassembly-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/c7egA4M2fFQ?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
