--- a/sewer-tools-nozzles/warthog-wt.html
+++ b/sewer-tools-nozzles/warthog-wt.html
@@ -30,7 +30,7 @@ master-slider: yes
           <div class="ms-slide">
             <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/wt-01.jpg" alt="Warthog WT sewer cleaning for small pipes with bends">
             <img class="ms-thumb" src="/assets/img/product/thumb-wt-01.jpg" alt="thumb">
-<!--                <a data-type="video" href="https://www.youtube.com/embed/LOzn4CvVwvw"> </a>-->
+                <a data-type="video" href="https://player.vimeo.com/video/340781614"></a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/wt-02.jpg" alt="Warthog WT sewer cleaning for small pipes with bends">
@@ -266,6 +266,18 @@ master-slider: yes
           
           <!-- Videos -->
           <section id="section-bar-3">
+            <div class="row row-centered">
+              <div class="col-sm-6 col-centered">
+                <!-- Lightbox call -->
+                <div>
+                  <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #wt-overview-vid">
+                    <img src="/assets/vid/thumb/wt-overview-vid.jpg" alt="WT sewer tool overview" class="img-responsive" />
+                  </a>
+                </div>
+                <!-- End Lightbox call -->
+                <p class="caption">Warthog WT sewer tool overview</p>
+              </div>
+            </div>
             <div class="row row-centered">
               <div class="col-sm-3 col-centered">
                 <!-- Lightbox call -->
